--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,20 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		// "allowJs": true, // https://github.com/tailwindlabs/tailwindcss/issues/14420
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"moduleResolution": "bundler",
-	},
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
-	"include": [
-		".svelte-kit/ambient.d.ts",
-		".svelte-kit/non-ambient.d.ts",
-		".svelte-kit/types/**/$types.d.ts",
-		// "src/**/*.js",
-		// "src/**/*.ts",
-		// "src/**/*.svelte",
-		// "tests/**/*.js",
-		// "tests/**/*.ts",
-		// "tests/**/*.svelte",
-		"forge.env.d.ts",
-		"src-main/**/*",
-		"src-native/**/*",
-		"src-renderer/**/*",
-	],
-  }
-  
+  "extends": "./.svelte-kit/tsconfig.json",
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
+  "include": [
+    "src-renderer",
+    "src-native",
+    ".svelte-kit/**/*",
+    "forge.env.d.ts",
+	"src-preload/global.d.ts",
+  ]
+}
