--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@sveltejs/vite-plugin-svelte": "5",
 		"@tailwindcss/vite": "4",
 		"@types/electron-squirrel-startup": "1",
+		"@types/leaflet": "^1.9.21",
 		"electron": "34",
 		"globals": "16",
 		"svelte": "5",
@@ -47,7 +48,11 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"axios": "^1.12.2",
+		"daisyui": "^5.3.1",
+		"dotenv": "^17.2.3",
 		"electron-squirrel-startup": "^1.0.1",
+		"leaflet": "^1.9.4",
 		"lowdb": "^7.0.1"
 	}
 }
