--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"daisyui": "^5.3.1",
 		"dotenv": "^17.2.3",
 		"electron-squirrel-startup": "^1.0.1",
+		"express": "^5.1.0",
 		"leaflet": "^1.9.4",
 		"lowdb": "^7.0.1"
 	}
