--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 		"@sveltejs/vite-plugin-svelte": "5",
 		"@tailwindcss/vite": "4",
 		"@types/electron-squirrel-startup": "1",
+		"@types/express": "^5.0.3",
 		"@types/leaflet": "^1.9.21",
 		"electron": "34",
+		"express": "^5.1.0",
 		"globals": "16",
 		"svelte": "5",
 		"svelte-check": "4",
@@ -52,7 +54,6 @@
 		"daisyui": "^5.3.1",
 		"dotenv": "^17.2.3",
 		"electron-squirrel-startup": "^1.0.1",
-		"express": "^5.1.0",
 		"leaflet": "^1.9.4",
 		"lowdb": "^7.0.1"
 	}
